--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-    <title>Menu con HTML y CSS</title>
+    <title>Menu Plegable</title>
     <!-- css fontawsome -->
     <link
       rel="stylesheet"
@@ -28,30 +28,30 @@
       <!-- social networks -->
       <div class="social-networks">
         <!-- linkedIn -->
-        <a href="#" target="_blank" class="social-networks__link-item">
-          <i class="fa-brands fa-github"></i>
+        <a href="https://github.com/budhisadva" target="_blank" class="social-networks__link-item">
+          <i class="fab fa-github"></i>
         </a>
         <!-- Git -->
-        <a href="#" target="_blank" class="social-networks__link-item">
-          <i class="fa-brands fa-linkedin"></i>
+        <a href="https://www.linkedin.com/in/sa%C3%BAl-gabriel-castillo-su%C3%A1rez-039165251/" target="_blank" class="social-networks__link-item">
+          <i class="fab fa-linkedin-in"></i>
         </a>
       </div>
       <!-- menu -->
       <div class="nav-main__menu">
         <a href="#" class="nav-main__link-item">
-          <i class="fa-regular fa-face-grin-beam"></i>
+          <i class="far fa-grin-beam"></i>
           About
         </a>
         <a href="#" class="nav-main__link-item">
-          <i class="fa-solid fa-sun"></i>
+          <i class="far fa-sun"></i>
           Services
         </a>
         <a href="#" class="nav-main__link-item">
-          <i class="fa-solid fa-flag"></i>
+          <i class="far fa-solid fa-flag"></i>
           Team
         </a>
         <a href="#" class="nav-main__link-item">
-          <i class="fa-light fa-envelope"></i>
+          <i class="far fa-light fa-envelope"></i>
           Contact
         </a>
       </div>
